# AdaptiveFilter_Cpp

./: .gitignore  AdaptiveFIR.cpp  AdaptiveFIR.h  AdaptiveFIR_LMS.cpp  AdaptiveFIR_LMS.h  AdaptiveFIR_RLS.cpp  AdaptiveFIR_RLS.h  CMakeLists.txt  Compare_LMS_RLS.cpp  ExampleFir.h  ExampleFir2.h  ExampleFirOrder.h  FFT.h  FilterReturnTypes.cpp  FilterReturnTypes.h  Fir.cpp  Fir.h  IIR.cpp  IIR.h  JsonServer.cpp  JsonServer.h  Matrix.cpp  Matrix.h  PlotTest.cpp  README.md  SysIdent_LMS.cpp  SysIdent_RLS.cpp  SysIdent_RLSOrder.cpp  doxyconfig  main.cpp  test_openmp.cpp
FFT/: FFT.cpp  FFT.h
FFT/Complex/: FftComplex.cpp  FftComplex.hpp  FftComplexTest.cpp
FFT/RealPair/: FftRealPair.cpp  FftRealPair.hpp  FftRealPairTest.cpp
FFT/Stream/: CLI_DataSource.cpp  CLI_DataSource.h  DataPoint.cpp  DataPoint.h  DataSource.cpp  DataSource.h  FFTStream.cpp  FFTStream.h  FFTStreamRun.cpp  HTTP_DataSource.cpp  HTTP_DataSource.h
FFT/Stream/test/: FFTStreamCombined.cpp  FFTStreamTest.cpp  RectGenerator.cpp  RectGenerator.h  SinusGenerator.cpp  SinusGenerator.h  index.html  live_plot.py  live_plot_fft.py  plot.js
FilterReturnTypes/: FilterReturnTypes.cpp  FilterReturnTypes.h  FreqzResult.cpp  FreqzResult.h  UpdateStats.cpp  UpdateStats.h  UpdateStatsOrder.h
Fir/: Fir.cpp  Fir.h  FirOrder.cpp  FirOrder.h
Iir/: Iir.cpp  Iir.h
Kalman/: CMakeLists.txt  kalman.cpp  kalman.h
Kalman/test/: CMakeLists.txt  alpha_beta_gamma_test.cpp  kalman_multidim_test.cpp  kalman_test.cpp
Matrix/: Matrix.cpp  Matrix.h  MatrixVector.h
Noise/: WhiteNoise.cpp  WhiteNoise.h
Server/: JsonServer.h
SignalGenerators/: SinusGenerator.h  Sleep.cpp  Sleep.h
adaptive_lms/: AdaptiveLMS.cpp  AdaptiveLMS.h  AdaptiveLMSOrder.h
adaptive_rls/: AdaptiveRLS.cpp  AdaptiveRLS.h  AdaptiveRLSOrder.h
pythonplots/: data.py  plot.py  plotCompare.py  plot_freqz.py
spectrogram/: InputThread.cpp  InputThread.h  Spectrogram.cpp  Spectrogram.h  SpectrogramUI.cpp  SpectrogramUI.h  SpectrogramUI_main.cpp
spectrogram/test/: CMakeLists.txt  InputThread_test.cpp  SpectrogramUI_test.cpp  Spectrogram_test.cpp
test/: AdaptiveFirTest.cpp  AdaptiveLMSOrderTest.cpp  AdaptiveRLSOrderTest.cpp  CMakeLists.txt  FirOrderTest.cpp  IIRTest.cpp  MatrixTest.cpp  WhiteNoiseTest.cpp
